# anecdote_tinder

./: .editorconfig  .gitignore  README.md  WINDOWS_QUICKSTART.md  pyproject.toml
backend/: .env.example  main.py  requirements.txt  seed_users.py
backend/app/: auth.py  config.py  main.py
backend/app/api/: __init__.py  auth.py  feed.py  like.py  profile.py  settings.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  like.py  profile.py  profile_view.py  session.py  user.py
backend/app/schemas/: __init__.py  auth.py  like.py  profile.py
backend/app/services/: feed.py
backend/tests/: conftest.py  test_auth.py  test_like.py  test_main.py  test_profile.py
docs/: auth-endpoints.md
frontend/: .env.example  .eslintrc.cjs  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useAuth.ts  useLikes.ts  useProfile.ts
frontend/src/pages/: LoginPage.tsx  MatchesPage.tsx  ProfilePage.tsx  RegisterPage.tsx  SearchPage.tsx  SettingsPage.tsx
frontend/src/pages/__tests__/: LoginPage.test.tsx  MatchesPage.test.tsx  ProfilePage.test.tsx  RegisterPage.test.tsx  SearchPage.test.tsx  SettingsPage.test.tsx
frontend/src/services/: api.ts  auth.ts  index.ts
frontend/src/state/: index.ts
frontend/src/types/: api.ts
scripts/: README.md  install.bat  install.sh  seed_users.bat  seed_users.sh  start_all.bat  start_all.sh  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh
